--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
     Google search results) and in your feed.xml site description.
   permalink: pretty
 
-  # baseurl: "" # the subpath of your site, e.g. /blog
+  baseurl: "/Pocono-Digital-House" # the subpath of your site, e.g. /blog
   # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
